# smart-travel-planner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.rag.yml  docker-compose.yml  main.py  pyproject.toml  tmp_asyncpg_test.py
.github/workflows/: ci.yml
backend/: ingest.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 20250501_0001_initial_schema.py
backend/app/api/: chat_markdown_split.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  sessions.py  travel.py
backend/app/core/: agent.py  config.py  country_flags.py  logging.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/models/: __init__.py
backend/app/schemas/: __init__.py  auth.py  chat.py  intent.py  tools.py
backend/app/services/: __init__.py  flights_service.py  fx_service.py  intent_extractor.py  rag_service.py  weather_service.py  webhook_service.py
backend/app/tools/: __init__.py  classifier_tool.py  live_tools.py  rag_tool.py
backend/ml/data/: destination_raw.csv  destinations_raw.csv
backend/ml/models/: X_test_processed.npy  X_train_processed.npy  X_val_processed.npy  y_test.npy  y_train.npy  y_val.npy
backend/ml/notebooks/: 00_clean_raw_data.ipynb  01_eda_data_audit.ipynb  02_data_cleaning_preprocessing.ipynb  03_baseline_models.ipynb  04_model_tuning_final.ipynb
backend/ml/scripts/: test_model.py
backend/rag/: __init__.py
backend/rag/data/clean/: amsterdam.md  bali.md  bangkok.md  barcelona.md  berlin.md  budapest.md  cape_town.md  cusco.md  dubai.md  edinburgh.md  istanbul.md  kathmandu.md  krakow.md  lisbon.md  maldives.md  new_york.md  paris.md  prague.md  queenstown.md  reykjavik.md  rome.md  santorini.md  sydney.md  tokyo.md  vienna.md
backend/rag/data/metadata/: amsterdam.json  bali.json  bangkok.json  barcelona.json  berlin.json  budapest.json  cape_town.json  cusco.json  dubai.json  edinburgh.json  istanbul.json  kathmandu.json  krakow.json  lisbon.json  maldives.json  new_york.json  paris.json  prague.json  queenstown.json  reykjavik.json  rome.json  santorini.json  sydney.json  tokyo.json  vienna.json
backend/rag/scripts/: __init__.py  chunk_documents.py  collect_content.py  embed_and_store.py  real_user_test.py  relevance_test.py  run_rag_pipeline.py  setup_database.py  test_all_queries.py  test_retrieval.py
backend/tests/: conftest.py  test_agent.py  test_chat_markdown_split.py  test_webhook_service.py
docker/: entrypoint-backend.sh
docker/frontend/: nginx.conf
docs/: agent_implementation_report.md  main-project.md  ml_cleaning_plan.md  ml_features_and_defenses.md  ml_labeling_rules.md  ml_pipeline_defense.md  ml_pipeline_plan.md  phase -0.md  rag_pipeline_defense.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  http.ts  sessions.ts
frontend/src/components/: AboutAgentDrawer.tsx  AppLogo.tsx  ChatHistoryModal.tsx  ChatPanel.tsx  InfoWorkspace.tsx  InlineClarification.tsx  LoadingEarth.tsx  MarkdownMessage.tsx  Sidebar.tsx  SidebarMobileTrigger.tsx  TypingIndicator.tsx  WelcomeModal.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/lib/: analysisFormatter.ts  splitTravelMarkdown.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
notebooks/: training.ipynb
